--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-<p>nome = Ahmad Maj </p>
-<p>idade = 44</p>
-<p>Amo aprender <html></html> </p>
-<p>cpf = 34288766</p>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <section lang="en">
+    <h1 style="background-color:aqua;">How Are You?"</h1>
+    <span style="background-color: blueviolet;">Mini Wiki</span><div
+    style="background-color: blanchedalmond;display: inline;">Another block element.> </div>
+    </section>
+    <section lang="pt-br">
+        <h1>POO - Programação Orientada a Objetos</h1>
+        <hr>
+        <span>Artigos >.NET> Os 4 pilares da Programação Orientada a Objetos</span>
+        <p>
+            O <a href="https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264" target="black">desenvolvimento de software</a> é extremamente amplo. Nesse mercado, existem diversas linguagens de programação, que seguem diferentes paradigmas. Um desses paradigmas é a Orientação a Objetos, que atualmente é o mais difundido entre todos. Isso acontece porque se trata de um padrão que tem evoluído muito, principalmente em questões voltadas para segurança e reaproveitamento de código, o que é muito importante no desenvolvimento de qualquer aplicação moderna.
+            </p>
+            <span><a href="pagina2.html">veja mais...</a></span>
+            </section>
+
+    </section>
+</body>
+</html>
