estudando tags basicas section,h1,p,span.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hr>
         <span>Artigos >.NET> Os 4 pilares da Programação Orientada a Objetos</span>
         <p>
-            O <a href="https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264" target="black">desenvolvimento de software</a> é extremamente amplo. Nesse mercado, existem diversas linguagens de programação, que seguem diferentes paradigmas. Um desses paradigmas é a Orientação a Objetos, que atualmente é o mais difundido entre todos. Isso acontece porque se trata de um padrão que tem evoluído muito, principalmente em questões voltadas para segurança e reaproveitamento de código, o que é muito importante no desenvolvimento de qualquer aplicação moderna.
+            O <a href="https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264" target="black">desenvolvimento de software</a> é extremamente amplo. Nesse mercado, existem diversas linguagens de programação, que seguem diferentes paradigmas. Um desses paradigmas é a Orientação a Objetos, que atualmente é o mais difundido entre todos. Isso acontece porque se trata de um padrão que tem evoluído muito, principalmente em questões voltadas para segurança e reaproveitamento de código, o que é muito importante no desenvolvimento de qualquer aplicação moderna e facil.
             </p>
             <span><a href="pagina2.html">veja mais...</a></span>
             </section>
